0.8.6 (2015-12-11)
==================

Bug fixes
---------

- Fix broken standalone annotation pages for replies (#2786).

- Fix a bug where realtime updates weren't delivered to standalone annotation
  pages for replies if the thread root on that page was also a reply (#2787).

- A number of other small fixes and clean-ups.

0.8.5 (2015-12-08)
==================

Bug fixes
---------

- Fix a blocker bug preventing annotations from being created (3d014fc).

0.8.4 (2015-12-08)
==================

Bug fixes
---------

- Fix a crash when rendering /robots.txt (e1c6021).

0.8.3 (2015-12-08)
==================

Bug fixes
---------

- Fix a crash that meant that reply notification emails would not be sent if
  the annotation replied to had no text (#2771).

- Fix a bug where realtime annotation updates weren't being sent to logged-out
  clients (#2776).

Features
--------

- A report on groups is now available in the admin dashboard, which can be
  downloaded in CSV format (#2764, #2772).

Miscellanea
-----------

- Banner added to the homepage (#2758).

- The community guidelines are now linked from the signup form (#2760).

- The frontend code that controls the annotation card widget has been translated
  to JavaScript, and numerous aspects of it have been refactored or simplified
  (#2756, #2761, #2762, #2763).

- The site now serves a robots.txt file (#2778).

0.8.2 (2015-11-30)
==================

Bug fixes
---------

- Fix a problem where messages that were supposed to be sent over the WebSocket
  on reconnect weren't (#2746).

- Fix a bug where an old sort control was shown in the sidebar (#2751).

- Fix a bug where creating an annotation before login could result in invalid
  data being sent to the server (#2754).

Miscellanea
-----------

- The Hypothesis home page is now served by this application (#2740).

- Annotation data is now validated using JSON Schema (#2745).

0.8.1 (2015-11-26)
==================

Bug fixes
---------
