@@ -17,6 +17,7 @@ FEATURES = {
     'claim': "Enable 'claim your username' web views?",
     'new_homepage': "Show the new homepage design?",
     'truncate_annotations': "Truncate long quotes and bodies in annotations?",
+    'embed_media': "Replace YouTube, Vimeo etc links in annotations with embeds",
 }
 
 
