@@ -99,6 +99,11 @@ $annotation-card-left-padding: 10px;
   .excerpt { max-height: 16.2em; }
 }
 
+.annotation-media-embed {
+  width: 369px;
+  height: 208px;
+}
+
 .annotation-user {
   color: $text-color;
   font-weight: bold;
